--- a/html.html
+++ b/html.html
@@ -22,6 +22,7 @@
 <script src="libs/jquery.js"></script>
 <script src="junDrag.js"></script>
 <script>
+	console.log('>>>>');
 	junDrag({ul:'.junDrag', timeDuration:300});
 </script>
 </body>
