初步有效果, 但触控有问题

--- a/html.html
+++ b/html.html
@@ -22,7 +22,7 @@
 <script src="libs/jquery.js"></script>
 <script src="junDrag.js"></script>
 <script>
-	junDrag();
+	new YCdrag();
 </script>
 </body>
 </html>
