--- a/html.html
+++ b/html.html
@@ -30,15 +30,15 @@
 		Container:".junDrag",
 		ItemClass: "",
 		dataList:[
-			{name:'drag 1',src:'./img/1.png',id:1},
-			{name:'drag 2',src:'./img/2.png',id:2},
-			{name:'drag 3',src:'./img/3.png',id:3},
-			{name:'drag 4',src:'./img/4.png',id:4},
-			{name:'drag 5',src:'./img/5.png',id:5},
-			{name:'drag 6',src:'./img/6.png',id:5},
-			{name:'drag 7',src:'./img/7.png',id:5},
-			{name:'drag 8',src:'./img/8.png',id:5},
-			{name:'drag 9',src:'./img/9.png',id:5}
+			{name:'drag 1',src:'./img/icon_1.png',id:1},
+			{name:'drag 2',src:'./img/icon_2.png',id:2},
+			{name:'drag 3',src:'./img/icon_3.png',id:3},
+			{name:'drag 4',src:'./img/icon_4.png',id:4},
+			{name:'drag 5',src:'./img/icon_5.png',id:5},
+			{name:'drag 6',src:'./img/icon_6.png',id:5},
+			{name:'drag 7',src:'./img/icon_7.png',id:5},
+			{name:'drag 8',src:'./img/icon_8.png',id:5},
+			{name:'drag 9',src:'./img/icon_9.png',id:5}
 		]
 	});
 </script>
