--- a/html.html
+++ b/html.html
@@ -26,7 +26,7 @@
 <script src="libs/jquery.js"></script>
 <script src="junDrag.js"></script>
 <script>
-	new YCdrag({
+	var hhhhh = new YCdrag({
 		Container:".junDrag",
 		ItemClass: "",
 		dataList:[
@@ -41,6 +41,22 @@
 			{name:'drag 9',src:'./img/icon_9.png',id:5}
 		]
 	});
+
+	hhhhh.addEvent("click", function($dragItem) {
+		console.log('clisssck');
+	});
+	hhhhh.addEvent("beforeDrag", function($dragItem){
+		$dragItem.append($('<span>').text('X').addClass('closebtn'))
+	});
+	hhhhh.addEvent("afterDrag", function($dragItem){
+		console.log('sssss33333333333', $dragItem.text());
+		$dragItem.append($('<span>').text('X').addClass('closebtn'))
+	});
+	hhhhh.addEvent("mouseDown", function($dragItem){
+		$dragItem.find('.closebtn').remove();
+	});
+
+
 </script>
 </body>
 </html>
