--- a/html.html
+++ b/html.html
@@ -7,26 +7,14 @@
 </head>
 <body>
 <h2 class="junDragtittle" style="background:lightgoldenrodyellow; font-size: 32px; text-align: center">YCdrag</h2>
-<!--<ul class="junDrag">-->
-	<!--<li data-index="1"><span>01</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="2"><span>02</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="3"><span>03</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="4"><span>04</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="5"><span>05</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="6"><span>06</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="7"><span>07</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="8"><span>08</span></li>&lt;!&ndash;-->
-	<!--&ndash;&gt;<li data-index="9"><span>09</span></li>-->
-<!--</ul>-->
+<button>获取数据</button>
+<div class="junDrag"></div>
 
-<div class="junDrag">
-	<!--content-->
-</div>
 
 <script src="libs/jquery.js"></script>
 <script src="junDrag.js"></script>
 <script>
-	var hhhhh = new YCdrag({
+	var dragControl = new YCdrag({
 		Container:".junDrag",
 		ItemClass: "",
 		dataList:[
@@ -35,26 +23,45 @@
 			{name:'drag 3',src:'./img/icon_3.png',id:3},
 			{name:'drag 4',src:'./img/icon_4.png',id:4},
 			{name:'drag 5',src:'./img/icon_5.png',id:5},
-			{name:'drag 6',src:'./img/icon_6.png',id:5},
-			{name:'drag 7',src:'./img/icon_7.png',id:5},
-			{name:'drag 8',src:'./img/icon_8.png',id:5},
-			{name:'drag 9',src:'./img/icon_9.png',id:5}
+			{name:'drag 6',src:'./img/icon_6.png',id:6},
+			{name:'drag 7',src:'./img/icon_7.png',id:7},
+			{name:'drag 8',src:'./img/icon_8.png',id:8},
+			{name:'drag 9',src:'./img/icon_9.png',id:9}
 		]
 	});
 
-	hhhhh.addEvent("click", function($dragItem) {
-		console.log('clisssck');
+	dragControl.addEvent("click", function() {
+		console.log('点击了一下');
 	});
-	hhhhh.addEvent("beforeDrag", function($dragItem){
-		$dragItem.append($('<span>').text('X').addClass('closebtn'))
+
+	dragControl.addEvent("press", function(type, $target) {
+		$target.append($('<span>').text('X').addClass('closebtn'));
+		$('.closebtn').on('mousedown', function(){
+			$target.remove();
+			return false;
+		})
 	});
-	hhhhh.addEvent("afterDrag", function($dragItem){
+
+	dragControl.addEvent("beforeDrag", function(type, $dragItem){
+		$dragItem.append($('<span>').text('X').addClass('closebtn'));
+		$('.closebtn').on('mousedown', function(){
+			$dragItem.remove();
+			return false;
+		})
+	});
+	dragControl.addEvent("afterDrag", function(type, $target){
 		console.log('sssss33333333333', $dragItem.text());
-		$dragItem.append($('<span>').text('X').addClass('closebtn'))
+		$target.append($('<span>').text('X').addClass('closebtn'))
 	});
-	hhhhh.addEvent("mouseDown", function($dragItem){
-		$dragItem.find('.closebtn').remove();
+	dragControl.addEvent("mouseDown", function(type, $targets){
+		$targets.find('.closebtn').remove();
 	});
+
+	$('button').click(function(){
+		console.log(dragControl.getData());
+	});
+
+
 
 
 </script>
