--- a/html.html
+++ b/html.html
@@ -81,6 +81,7 @@
 	var dragController = $('.junDrag').YCdrag({
 //		ItemNode:"li",
 //		ItemClassName:"cell",
+		closehtml:"<span></span>",
 		dataList:[
 			{text:'信用卡', icon:"c", id:"credit", link:"example/index/mycountDetail"},
 			{text:'理财交易', icon:"d", id:"product", link:"example/index/iwant"},
@@ -95,12 +96,12 @@
 
 //	var modifyMode = false;
 
-dragController.YCdrag.addEvent("templatelist", function(data) {
-				return $('<div>')
-						.attr({'id': data.id, "data-YClink": data.link})
-						.append($("<i class='list-ico'>").addClass(data.icon))
-						.append($('<span>').text("j1jj"+data.text))[0].outerHTML
-});
+//dragController.YCdrag.addEvent("templatelist", function(data) {
+//				return $('<div>')
+//						.attr({'id': data.id, "data-YClink": data.link})
+//						.append($("<i class='list-ico'>").addClass(data.icon))
+//						.append($('<span>').text("j1jj"+data.text))[0].outerHTML
+//});
 
 //YCdrag.prototype.templatelist = function(){
 //	return $('<' + _.options.ItemNode + '>')
@@ -121,7 +122,7 @@ dragController.YCdrag.addEvent("templatelist", function(data) {
 //			modifyMode = false;
 //		}
 //	});
-//
+////
 //	dragController.YCdrag.addEvent(["press", "beforeDrag", "afterDrag"], function(type, $target) {
 //		modifyMode = true;
 //		$target.append(
