准备整理, 修改为项目组版本

--- a/html.html
+++ b/html.html
@@ -31,6 +31,10 @@
 		]
 	});
 
+	dragControl.on('touchStasssrt', function(){
+		console.log('sssss111111111111111111')
+	});
+
 //	dragControl.addEvent("click", function() {
 //		console.log('点击了一下');
 //	});
