--- a/html.html
+++ b/html.html
@@ -12,7 +12,7 @@
 
 
 <script src="libs/jquery.js"></script>
-<script src="junDrag.js"></script>
+<script src="DraggableMenu.js"></script>
 <script>
 	var dragControl = new DraggableMenu({
 		container:".DraggableMenu",
