--- a/html.html
+++ b/html.html
@@ -6,7 +6,11 @@
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+
+<div style="height:900px"></div>
 <h2 class="DraggableMenutittle" style="background:lightgoldenrodyellow; font-size: 32px; text-align: center">DraggableMenu</h2>
+<h2 class="DraggableMenutittle2" style="background:lightgoldenrodyellow; font-size: 32px; text-align: center">DraggableMenu</h2>
+<h2 class="DraggableMenutittle3" style="background:lightgoldenrodyellow; font-size: 32px; text-align: center">DraggableMenu</h2>
 <button>获取数据</button>
 <!--<div class="DraggableMenu"></div>-->
 <ul class="table-col-4 DraggableMenu">
@@ -34,7 +38,7 @@
 //	});
 //
 //	dragControl.on('touchStasssrt', function(){
-//		console.log('sssss111111111111111111')
+//		$('.DraggableMenutittle').text('sssss111111111111111111')
 //	});
 
 	var dragControl = new DraggableMenu({
@@ -60,15 +64,15 @@
 		},
 
 		onItemTap: function(data){
-			console.log('app.navigate = ', data);
+			$('.DraggableMenutittle').text('app.navigate='+ data.url);
 		},
 
 		onDragEnd:function(){
-			console.log('onDragEnd');
+			$('.DraggableMenutittle').text('onDragEnd');
 		},
 
 		onClose:function(){
-			console.log('onClose');
+			$('.DraggableMenutittle').text('onClose');
 		}
 
 	});
@@ -77,7 +81,7 @@
 
 
 //	dragControl.addEvent("click", function() {
-//		console.log('点击了一下');
+//		$('.DraggableMenutittle').text('点击了一下');
 //	});
 //
 //	dragControl.addEvent("press", function(type, $target) {
@@ -96,7 +100,7 @@
 //		})
 //	});
 //	dragControl.addEvent("afterDrag", function(type, $target){
-//		console.log('sssss33333333333', $dragItem.text());
+//		$('.DraggableMenutittle').text('sssss33333333333', $dragItem.text());
 //		$target.append($('<span>').text('X').addClass('closebtn'))
 //	});
 //	dragControl.addEvent("mouseDown", function(type, $targets){
@@ -104,7 +108,7 @@
 //	});
 //
 //	$('button').click(function(){
-//		console.log(dragControl.getData());
+//		$('.DraggableMenutittle').text(dragControl.getData());
 //	});
 
 
@@ -162,7 +166,7 @@
 //		if(!modifyMode){
 //			var link = $target.attr("data-YClink");
 ////			App.navigate(link, true);
-//			console.log('link: ', link);
+//			$('.DraggableMenutittle').text('link: ', link);
 //			return false;
 //		}else{ // 若是在修改模式的情况下的点击是返回非修改模式
 //			modifyMode = false;
