进行了较多的修改, 1, 添加了不可排序的属性undraggable, 当有undraggable的子项时, 生成的html是把不可拖动的项目放在最后位置, 当拖动项目时,检测到拖动目标是最后不可拖动项目时, 不执行插入排序.
2, 修改了绑定数据的$.data方法的执行时机, 不应该在render之后才绑定数据, 应该在循环datalist时候对生成好的$html的jQuery包装集绑定, 这样可以免去多次循环.

--- a/html.html
+++ b/html.html
@@ -51,9 +51,10 @@
 			{text:'生活缴费', icon:"e", id:"life", url:"example/index/lifePayment"},
 			{text:'关联转账', icon:"f", id:"", url:""},
 			{text:'周边', icon:"g", id:"bankNodes", url:"example/index/bankNodes"},
-			{text:'话费充值', icon:"h", id:"recharge", url:"example/index/recharge"},
+			{text:'话费充值', undraggable:true, icon:"h", id:"recharge", url:"example/index/recharge"},
 			{text:'无卡取款', icon:"i", id:"", url:""},
-			{text:'组件展示', icon:"d", id:"toComponentsList", url:"demo/demo/list"}
+//			{text:'组件展示', icon:"d", id:"toComponentsList", url:"demo/demo/list"},
+			{text:'更多', icon:"d", id:"toComponentsList", url:"demo/demo/list"}
 		],
 
 		renderer: function(data, i){
@@ -73,6 +74,10 @@
 
 		onClose:function(){
 			$('.DraggableMenutittle').text('onClose');
+		},
+		onEditing:function(){
+
+//			console.log('进入编辑模式')
 		}
 
 	});
