--- a/html.html
+++ b/html.html
@@ -24,15 +24,15 @@
 		container:".DraggableMenu",
 
 		dataList:[
-			{text:'信用卡', icon:"c", id:"credit", url:"example/index/mycountDetail"},
-			{text:'理财交易', icon:"d", id:"product", url:"example/index/iwant"},
-			{text:'生活缴费', icon:"e", id:"life", url:"example/index/lifePayment"},
-			{text:'关联转账', icon:"f", id:"", url:""},
-			{text:'周边', icon:"g", id:"bankNodes", url:"example/index/bankNodes"},
-			{text:'话费充值', icon:"h", id:"recharge", url:"example/index/recharge"},
-			{text:'无卡取款', icon:"i", id:"", url:""},
+			{text:'0  信用卡', icon:"c", id:"credit", url:"example/index/mycountDetail"},
+			{text:'1  理财交易', icon:"d", id:"product", url:"example/index/iwant"},
+			{text:'2  生活缴费', icon:"e", id:"life", url:"example/index/lifePayment"},
+			{text:'3  关联转账', icon:"f", id:"", url:""},
+			{text:'4  周边', icon:"g", id:"bankNodes", url:"example/index/bankNodes"},
+			{text:'5  话费充值', icon:"h", id:"recharge", url:"example/index/recharge"},
+			{text:'6  无卡取款', icon:"i", id:"", url:""},
 //			{text:'组件展示', icon:"d", id:"toComponentsList", url:"demo/demo/list"},
-			{text:'更多', icon:"d", id:"toComponentsList", url:"demo/demo/list"}
+			{text:'7  更多', icon:"d", id:"toComponentsList", url:"demo/demo/list"}
 		],
 
 		renderer: function(data, i){
