--- a/html.html
+++ b/html.html
@@ -16,10 +16,10 @@
 </ul>
 
 <script src="libs/jquery.js"></script>
-<script src="DraggableMenu.js"></script>
+<script src="draggableMenu.js"></script>
 <script>
 
-	var dragControl = new DraggableMenu({
+	var DraggableMenu = new DraggableMenu({
 
 		container:".DraggableMenu",
 
