项目版本混合模式V2.0

--- a/html.html
+++ b/html.html
@@ -16,7 +16,7 @@
 </ul>
 
 <script src="libs/jquery.js"></script>
-<script src="draggableMenu.js"></script>
+<script src="DraggableMenu.js"></script>
 <script>
 
 	var DraggableMenu = new DraggableMenu({
