修改注释, 完善变量

--- a/html.html
+++ b/html.html
@@ -11,7 +11,7 @@
 <h2 class="DraggableMenutittle" style="background:lightgoldenrodyellow; font-size: 32px; text-align: center">DraggableMenu</h2>
 <button>获取数据</button>
 <!--<div class="DraggableMenu"></div>-->
-<ul class="table-col-4 DraggableMenu">
+<ul class="draggableMenu">
 
 </ul>
 
@@ -21,7 +21,7 @@
 
 	var DraggableMenu = new DraggableMenu({
 
-		container:".DraggableMenu",
+		container:".draggableMenu",
 
 		dataList:[
 			{text:'0  信用卡', icon:"c", id:"credit", url:"example/index/mycountDetail"},
