--- a/html.html
+++ b/html.html
@@ -29,6 +29,13 @@
 		/*0%,100%{opacity:1}*/
 		/*50%{opacity:0.1}*/
 	/*}*/
+
+	.dragItem.DrM-activeItem.DrM-draggingItem{
+		/*height:300px;*/
+		/*width:300px;*/
+		/*-webkit-transform:scale3d(1.2, 1.2, 1.2);*/
+		/*transform:scale3d(1.2, 1.2, 1.2);*/
+	}
 </style>
 <script>
 
