合并变量, 修改好transition, 修改好初始化

--- a/html.html
+++ b/html.html
@@ -18,10 +18,11 @@
 </ul>
 
 <script src="libs/jquery.js"></script>
+<script src="../cssProp/cssProp.js"></script>
 <script src="DraggableMenu.js"></script>
 
 <script>
-	var DraggableMenu = new DraggableMenu($(".draggableMenu"), {
+	var DraggableMenu = new arrangeTable($(".draggableMenu"), {
 
 		dataList:[
 			{text:'0  信用卡', icon:"c", id:"credit", url:"example/index/mycountDetail"},
