15, 不需要再使用textIndex来计算visualIndex了, 也不需要indexAry了 //??  16, 使用transitionEnd来处理cssHandler的动画效果, 避开setTimeout  //okay!  17, 设计错误! : dragItem就是原item, 不用复制处理, ghostItem才是复制出来的  //okay!  17, 不使用ghostItem! 我想不出有何意义  18, _itemHandler还没有很好的分离出来  19, reorderItem这身份没必要, reorderIndex也是多余的 //okay!

--- a/html.html
+++ b/html.html
@@ -38,7 +38,7 @@
 
 		renderer: function(data, i){
 			// <li class="dragItem" id="recharge"><i class="list-ico h"></i><span>话费充值</span></li>
-			return $('<li>').addClass('dragItem').attr({'id': data.id})
+			return $('<li>').addClass('item').attr({'id': data.id})
 					.append($("<i class='list-ico'>").addClass(data.icon))
 					.append($('<span>').text(data.text))
 					.append($('<span class="DrM-closeBtn">').text('-')); // 关闭按钮都是用户自定义的,
