--- a/html.html
+++ b/html.html
@@ -24,16 +24,26 @@
 <script>
 	var DraggableMenu = new arrangeTable($(".draggableMenu"), {
 
+//		dataList:[
+//			{text:'0  信用卡', icon:"c", id:"credit", url:"example/index/mycountDetail"},
+//			{text:'1  理财交易', icon:"d", id:"product", url:"example/index/iwant"},
+//			{text:'2  生活缴费', icon:"e", id:"life", url:"example/index/lifePayment"},
+//			{text:'3  关联转账', icon:"f", id:"", url:""},
+//			{text:'4  周边', icon:"g", id:"bankNodes", url:"example/index/bankNodes"},
+//			{text:'5  话费充值', icon:"h", id:"recharge", url:"example/index/recharge"},
+//			{text:'6  无卡取款', icon:"i", id:"", url:""},
+////			{text:'组件展示', icon:"d", id:"toComponentsList", url:"demo/demo/list"},
+//			{text:'7  更多', icon:"d", id:"toComponentsList", static:true, url:"demo/demo/list"}
+//		],
 		dataList:[
-			{text:'0  信用卡', icon:"c", id:"credit", url:"example/index/mycountDetail"},
-			{text:'1  理财交易', icon:"d", id:"product", url:"example/index/iwant"},
-			{text:'2  生活缴费', icon:"e", id:"life", url:"example/index/lifePayment"},
-			{text:'3  关联转账', icon:"f", id:"", url:""},
-			{text:'4  周边', icon:"g", id:"bankNodes", url:"example/index/bankNodes"},
-			{text:'5  话费充值', icon:"h", id:"recharge", url:"example/index/recharge"},
-			{text:'6  无卡取款', icon:"i", id:"", url:""},
-//			{text:'组件展示', icon:"d", id:"toComponentsList", url:"demo/demo/list"},
-			{text:'7  更多', icon:"d", id:"toComponentsList", url:"demo/demo/list"}
+			{text:'0  信用卡', icon:"c", id:"credit", url:"0  信用卡"},
+			{text:'1  理财交易', icon:"d", id:"product", url:"1  理财交易"},
+			{text:'2  生活缴费', icon:"e", id:"life", url:"2  生活缴费"},
+			{text:'3  关联转账', icon:"f", id:"", url:"3  关联转账"},
+			{text:'4  周边', icon:"g", id:"bankNodes", url:"4  周边"},
+			{text:'5  话费充值', icon:"h", id:"recharge", url:"5  话费充值"},
+			{text:'6  无卡取款', icon:"i", id:"", url:"6  无卡取款"},
+			{text:'7  更多', icon:"d", id:"toComponentsList", static:true, url:"7  更多"}
 		],
 
 		renderer: function(data, i){
